# Gerenciamento_Atendimento_Medico

./: CMakeLists.txt  README.md  gerenciador-medico
data/: arquivo
src/: abb.h  arquivo.c  arquivo.h  atendimento.c  atendimento.h  atendimento_prioritario.c  atendimento_prioritario.h  cadastro.c  cadastro.h  desfazer.c  desfazer.h  fila.h  gerenciador.c  gerenciador.h  heap.h  main.c  pesquisa.c  pesquisa.h  pilha.h
